2006-08-17  Duncan Mak  <duncan@a-chinaman.com>

	* src/gslist.c (g_slist_remove_link): I misread the function
	signature. Re-implemented.
	(g_slist_delete_link): Implemented.

2006-08-17  Duncan Mak  <duncan@a-chinaman.com>

	* src/gslist.c (g_slist_find): 
	(g_slist_length):
	(g_slist_remove):
	(g_slist_remove_link): Implemented.

	* test/slist.c: Tests for GSList.

2006-08-17  Raja R Harinath  <harinath@gmail.com>

	* src/gslist.c (g_slist_free_1): New.  Free a single list node.
	(g_slist_free): Use it to free the list nodes.  Don't free the
	data, since the list doesn't own it.
	(g_slist_append): Convert into a one-liner.
	(g_slist_foreach): Remove redundant null check.
	(g_slist_last): Actually return the last node.
	(g_slist_copy): Simplify.
	* src/gslist.h (g_slist_free_1): Add.

2006-08-16  Duncan Mak  <duncan@a-chinaman.com>

	* src/gslist.c:

	* src/gslist.h: First attempt at implementing GSList, incomplete.

	* src/Makefile.am (libeglib_la_SOURCES): add gslist.c
	* src/glib.h: Add GFunc definition. #include the new gslist.h.

2006-08-16  Miguel de Icaza  <miguel@novell.com>

	* src/Makefile.am: Added -Wall,-Werror, corrected lots of
	mistakes.

	* src/gstring.c: Gstring implementation.

	* test/str.c (test_gstring): string tests.

2006-08-16  Aaron Bockover  <abockover@novell.com>

	* src/gstr.c: Added g_strsplit implementation

	* test/driver.c: Run the split test

	* test/str.c: Added a test for g_strsplit

	* Makefile.am:
	* src/Makefile.am:
	* test/Makefile.am: Added MAINTAINERCLEANFILES

2006-08-16  Miguel de Icaza  <miguel@novell.com>

	* src/gouput.c: Implement some output routines, update missing
	progress. 

	* test: Add test driver, and initial tests. 

2006-08-15  Miguel de Icaza  <miguel@novell.com>

	* src/ghashtable.c: Implement most of this, it is completely
	untested at this point.
